# coldcall

./: .env.example  .gitignore  LICENSE  README.md  coldcall.yaml.example  pyproject.toml
.github/workflows/: voice-test.yml
coldcall/: __init__.py  bot.py  cli.py  config.py  demo.py  direct.py  humanizer.py  judge.py  livekit_transport.py  metrics.py  noise.py  phone.py  recorder.py  report.py  scenarios.py  server.py  transport.py
docs/: ci-guide.md
scenarios/: address-change.yaml  angry-refund.yaml  callcenter-billing-dispute.yaml  callcenter-cancellation-retention.yaml  callcenter-hold-transfer.yaml  callcenter-tech-support.yaml  confused-elderly.yaml  contradictory-info.yaml  dental-appointment.yaml  escalation-request.yaml  fast-speaker.yaml  general-faq.yaml  impatient-interrupter.yaml  inappropriate-content.yaml  lease-renewal.yaml  leasing-inquiry.yaml  long-silence.yaml  mind-changer.yaml  mixed-language.yaml  off-topic.yaml  order-status.yaml  prescription-refill.yaml  prompt-extraction.yaml  repeat-requests.yaml  social-engineering.yaml  tenant-maintenance.yaml  wrong-info-correction.yaml
tests/: test_config.py  test_humanizer.py  test_metrics.py  test_report.py  test_scenarios.py
