[project]
name = "coldcall"
version = "0.1.0"
description = "Benchmark and test voice AI agents via cold calls"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "twilio>=9.0",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
    "pipecat-ai[websocket,deepgram,openai,cartesia,silero]>=0.0.105",
    "typer[all]>=0.9",
    "pyyaml>=6.0",
]

[project.scripts]
coldcall = "coldcall.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
